--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
           <li><a href="#">Фото и видео</a></li>
           <li><a href="#">Карта штата</a></li>
           <li>
-            <a class="siti-navigation-curent" href="hotels.html">Гостиницы</a>
+            <a class="site-navigation-curent" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </nav>
@@ -38,24 +38,18 @@
                 <fieldset class="sorting-type">
                   <legend class="visually-hidden">По типам</legend>
                   <p>
-                      <label for="sorting-price">
-                        <a>По цене</a>
-                      </label>
-                      <input class="visually-hidden" type="radio" name="sorting-type" value="price" id="sorting-price" checked>
+                      <label for="sorting-price">По цене</label>
+                      <input type="radio" name="sorting-type" value="price" id="sorting-price" checked>
                   </p>
 
                   <p>
-                      <label for="sorting-type">
-                        <a>По типу</a>
-                      </label>
-                      <input class="visually-hidden" type="radio" name="sorting-type" value="type" id="sorting-type">
+                      <label for="sorting-type">По типу</label>
+                      <input type="radio" name="sorting-type" value="type" id="sorting-type">
                   </p>
 
                   <p>
-                      <label for="sorting-rating">
-                        <a>По рейтингу</a>
-                      </label>
-                      <input class="visually-hidden" type="radio" name="sorting-type" value="rating" id="sorting-rating">
+                      <label for="sorting-rating">По рейтингу</label>
+                      <input type="radio" name="sorting-type" value="rating" id="sorting-rating">
                   </p>
                 </fieldset>
 
@@ -65,7 +59,7 @@
                   </legend>
                   <p>
                     <label class="visually-hidden" for="sorting-increase">
-                      <a>По увеличению</a>
+                      По увеличению
                     </label>
                     <input type="radio" name="sorting-descending-increase" value="increase" id="sorting-increase">
                   </p>
@@ -140,10 +134,10 @@
       </main>
 
       <footer class="main-footer">
-        <div class="column-left">
+        <div class="column">
           <p class="footer-hashtag">#visitsedona</p>
         </div>
-        <div class="column-center">
+        <div class="column">
           <ul class="footer-social">
             <li>
               <a class="button social-button social-twitter" href="#">
@@ -162,24 +156,7 @@
             </li>
           </ul>
         </div>
-        <div class="column-right">
-          <ul class="footer-social">
-            <li>
-              <a class="button social-button social-twitter" href="#">
-                <span class="visually-hidden">Твиттер</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-facebook" href="#">
-                <span class="visually-hidden">Фейсбук</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-youtube" href="#">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
+        <div class="column">
           <p class="footer-copyright">
             <span>Website by</span>
             <a href="https://htmlacademy.ru/intensive/htmlcss">
