--- a/index.html
+++ b/index.html
@@ -21,76 +21,76 @@
 
     <main class="container">
       <h1 class="visually-hidden">Турагентство «Седона»</h1>
-      <div class="image-slogan">
-        <p class="image">
-          <img src="img/1200x508.png" width="1200" height="508" alt="Фотография гор седоны и слоган">
-        </p>
-        <p class="visually-hidden">Welcome to the gorgeous Sedona</p>
-        <p class="visually-hidden">«Because the grand canyon sucks!»</p>
-        <p class="slogan">Седона — небольшой городок в аризоне, Заслуживающий большего!</p>
-      </div>
+      <p class="container-image">
+        <img src="img/458x352.png" width="458" height="352" alt="Welcome to the gorgeous Sedona. Sedona «Because the grand canyon sucks!»">
+      </p>
       <section class="features">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-
+        <div class="column">
+          <p class="slogan">Седона — небольшой городок в аризоне, Заслуживающий большего!</p>
+          <p class="subtitle">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+        </div>
         <ul class="features-list">
           <li class="features-item">
             <div class="column">
-              <span>№1</span>
-              <h3>Настоящий Городок</h3>
-              <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
-            </div>
-            <p class="item-image-1">
-              <img src="img/800x256.png" width="800" height="256" alt="Фотография города Седона">
-            </p>
-          </li>
-
-          <li class="features-item more-list">
-            <ul class="features-list-more">
-              <li class="features-item">
-                <h3>Жилье</h3>
-                <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </li>
-
-              <li class="features-item">
-                <h3>Еда</h3>
-                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-
-              <li class="features-item">
-                <h3>Сувениры</h3>
-                <p>Не только китайского, но и местного производства!</p>
-              </li>
-            </ul>
+                <h3>Настоящий Городок</h3>
+                <span>№1</span>
+                <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
+              </div>
+            <div class="column">
+                <img src="img/800x256.png" width="800" height="256" alt="Город Седона">
+              </div>
           </li>
 
           <li class="features-item">
             <div class="column">
-              <span>№2</span>
               <h3>Там есть мост дьявола</h3>
+              <span>№2</span>
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
-            <p class="item-image-2">
-              <img src="img/800x256.png" width="800" height="256" alt="Фотография моста дьявола">
-            </p>
+            <div class="column image">
+              <img src="img/800x256.png" width="800" height="256" alt="Мост дьявола">
+            </div>
           </li>
 
           <li class="features-item">
-            <span>№3</span>
             <h3>Небольшая Площадь</h3>
+            <span>№3</span>
             <p>Все достопримечательности находятся очень близко</p>
           </li>
 
           <li class="features-item">
-            <span>№4</span>
             <h3>Красивая Дорога</h3>
+            <span>№4</span>
             <p>Ехать в Седону из Лас-вегаса совсем не скучно!</p>
           </li>
 
           <li class="features-item">
-            <span>№5</span>
             <h3>Мало туристов</h3>
+            <span>№5</span>
             <p>Большинство едет в гранд каньон и толпится там</p>
+          </li>
+
+          <li>
+            <ul class="features-list-more">
+              <li class="features-more-item">
+                    <h3>Жилье</h3>
+                    <span class="visually-hidden">№6</span>
+                    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+
+              <li class="features-more-item">
+                    <h3>Еда</h3>
+                    <span class="visually-hidden">№7</span>
+                    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+
+              <li class="features-more-item">
+                    <h3>Сувениры</h3>
+                    <span class="visually-hidden">№8</span>
+                    <p>Не только китайского, но и местного производства!</p>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
@@ -108,55 +108,37 @@
     </main>
 
     <footer class="main-footer">
-        <div class="column-left">
-          <p class="footer-hashtag">#visitsedona</p>
-        </div>
-        <div class="column-center">
-          <ul class="footer-social">
-            <li>
-              <a class="button social-button social-twitter" href="#">
-                <span class="visually-hidden">Твиттер</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-facebook" href="#">
-                <span class="visually-hidden">Фейсбук</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-youtube" href="#">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="column-right">
-          <ul class="footer-social">
-            <li>
-              <a class="button social-button social-twitter" href="#">
-                <span class="visually-hidden">Твиттер</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-facebook" href="#">
-                <span class="visually-hidden">Фейсбук</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-youtube" href="#">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
-          <p class="footer-copyright">
-            <span>Website by</span>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
+      <div class="column">
+        <p class="footer-hashtag">#visitsedona</p>
+      </div>
+      <div class="column">
+        <ul class="footer-social">
+          <li>
+            <a class="button social-button social-twitter" href="#">
+              <span class="visually-hidden">Твиттер</span>
             </a>
-          </p>
-        </div>
-
-      </footer>
+          </li>
+          <li>
+            <a class="button social-button social-facebook" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button social-youtube" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="column">
+        <p class="footer-copyright">
+          <span>Website by</span>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
+          </a>
+        </p>
+      </div>
+    </footer>
 
     <section class="active modal modal-form">
         <h2 class="visually-hidden">Форма поиска гостиниц</h2>
