Изменил пункты преимуществ , и убрал карту из футера.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
               </div>
           </li>
 
+          <li class="features-item features-more-item">
+            <h3>Жилье</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+
+          <li class="features-item features-more-item">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+
+          <li class="features-item features-more-item">
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и местного производства!</p>
+          </li>
+
           <li class="features-item">
             <div class="column">
               <h3>Там есть мост дьявола</h3>
@@ -71,27 +86,7 @@
             <p>Большинство едет в гранд каньон и толпится там</p>
           </li>
 
-          <li>
-            <ul class="features-list-more">
-              <li class="features-more-item">
-                    <h3>Жилье</h3>
-                    <span class="visually-hidden">№6</span>
-                    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-              </li>
 
-              <li class="features-more-item">
-                    <h3>Еда</h3>
-                    <span class="visually-hidden">№7</span>
-                    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-
-              <li class="features-more-item">
-                    <h3>Сувениры</h3>
-                    <span class="visually-hidden">№8</span>
-                    <p>Не только китайского, но и местного производства!</p>
-              </li>
-            </ul>
-          </li>
         </ul>
       </section>
 
@@ -151,43 +146,42 @@
       </section>
     </main>
 
+    <section class="main-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <img src="img/1200x593.png" width="1200" height="593" alt="Координаты города Седона">
+    </section>
+
     <footer class="main-footer">
-      <div class="main-footer-conteiner">
-        <div class="column">
-          <p class="footer-hashtag">#visitsedona</p>
-        </div>
-        <div class="column">
-          <ul class="footer-social">
-            <li>
-              <a class="button social-button social-twitter" href="#">
-                <span class="visually-hidden">Твиттер</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-facebook" href="#">
-                <span class="visually-hidden">Фейсбук</span>
-              </a>
-            </li>
-            <li>
-              <a class="button social-button social-youtube" href="#">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="column">
-          <p class="footer-copyright">
-            <span>Website by</span>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
-            </a>
-          </p>
-        </div>
+      <div class="column">
+        <p class="footer-hashtag">#visitsedona</p>
       </div>
-      <section class="main-map">
-        <h2 class="visually-hidden">Как до нас добраться</h2>
-        <img src="img/1200x593.png" width="1200" height="593" alt="Координаты города Седона">
-      </section>
+      <div class="column">
+        <ul class="footer-social">
+          <li>
+            <a class="button social-button social-twitter" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button social-facebook" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li>
+            <a class="button social-button social-youtube" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="column">
+        <p class="footer-copyright">
+          <span>Website by</span>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
+          </a>
+        </p>
+      </div>
     </footer>
 
 
