Подключил контентные изображения к двум страницам.

--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/138x70.png" width="138" height="70" alt="Логотип турагентства «Седона»">
-        </a>
-        <ul class="site-navigation">
-          <li><a href="#">Информация</a></li>
-          <li><a href="#">Фото и видео</a></li>
-          <li><a href="#">Карта штата</a></li>
-          <li><a href="catalog.html">Гостиницы</a></li>
-        </ul>
-      </nav>
-    </header>
+       <nav class="main-navigation">
+         <a class="main-header-logo" >
+           <img src="img/logo-sedona.png" width="138" height="70" alt="Логотип турагентства «Седона»">
+         </a>
+         <ul class="site-navigation">
+           <li><a href="#">Информация</a></li>
+           <li><a href="#">Фото и видео</a></li>
+           <li><a href="#">Карта штата</a></li>
+           <li><a href="catalog.html">Гостиницы</a></li>
+         </ul>
+       </nav>
+     </header>
 
     <main class="container">
       <h1 class="visually-hidden">Турагентство «Седона»</h1>
       <p class="container-image">
-        <img src="img/458x352.png" width="458" height="352" alt="Welcome to the gorgeous Sedona. Sedona «Because the grand canyon sucks!»">
+        <img src="img/image-slogan.png" width="458" height="352" alt="Welcome to the gorgeous Sedona. Sedona «Because the grand canyon sucks!»">
       </p>
       <section class="features">
         <h2 class="visually-hidden">Наши преимущества</h2>
@@ -38,7 +38,7 @@
                 <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
               </div>
             <div class="column">
-                <img src="img/800x256.png" width="800" height="256" alt="Город Седона">
+                <img src="img/city.jpg" width="800" height="256" alt="Город Седона">
               </div>
           </li>
 
@@ -64,7 +64,7 @@
               <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             </div>
             <div class="column image">
-              <img src="img/800x256.png" width="800" height="256" alt="Мост дьявола">
+              <img src="img/canyon.jpg" width="800" height="256" alt="Мост дьявола">
             </div>
           </li>
 
@@ -85,8 +85,6 @@
             <span>№5</span>
             <p>Большинство едет в гранд каньон и толпится там</p>
           </li>
-
-
         </ul>
       </section>
 
@@ -107,7 +105,7 @@
                 <label for="arrival-data">Дата заезда:</label>
                 <div class="column-input-icon">
                   <input type="text" name="arrival-data" placeholder="24 Апреля 2017" id="arrival-data">
-                  <img src="img/21x20.png" width="21" height="20" alt="Иконка календаря">
+                  <img src="img/calendar.svg" width="21" height="20" alt="Иконка календаря">
                 </div>
               </div>
 
@@ -115,7 +113,7 @@
                 <label for="departure-date">Дата выезда:</label>
                 <div class="column-input-icon">
                   <input type="text" name="departure-date" placeholder="4 июля 2017" id="departure-date">
-                  <img src="img/21x20.png" width="21" height="20" alt="Иконка календаря">
+                  <img src="img/calendar.svg" width="21" height="20" alt="Иконка календаря">
                 </div>
               </div>
             </fieldset>
@@ -148,7 +146,7 @@
 
     <section class="main-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <img src="img/1200x593.png" width="1200" height="593" alt="Координаты города Седона">
+      <img src="img/map.png" width="1200" height="593" alt="Координаты города Седона">
     </section>
 
     <footer class="main-footer">
@@ -178,12 +176,10 @@
         <p class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru/intensive/htmlcss">
-            <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
+            <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
           </a>
         </p>
       </div>
     </footer>
-
-
   </body>
 </html>
