--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html">
-          <img src="img/138x70.png" width="138" height="70" alt="Логотип турагентства «Седона»">
+          <img src="img/logo-sedona.png" width="138" height="70" alt="Логотип турагентства «Седона»">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Информация</a></li>
@@ -122,7 +122,7 @@
           <ul class="found-hotels-list">
             <li class="found-hotels-item">
               <p class="image-hotel">
-                <img src="img/135x90.png" width="135" height="90" alt="Amara Resort & Spa">
+                <img src="img/amara-resor-spa.jpg" width="135" height="90" alt="Amara Resort & Spa">
               </p>
               <div class="column-info-reserve">
                 <a class="name-hotel" href="#">Amara Resort & Spa</a>
@@ -140,7 +140,7 @@
 
             <li class="found-hotels-item">
               <p class="image-hotel">
-                <img src="img/135x90.png" width="135" height="90" alt="Desert Quail Inn">
+                <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
               </p>
               <div class="column-info-reserve">
                 <a class="name-hotel" href="#">Desert Quail Inn</a>
@@ -158,7 +158,7 @@
 
             <li class="found-hotels-item">
               <p class="image-hotel">
-                <img src="img/135x90.png" width="135" height="90" alt="Villas at Poco Diablo">
+                <img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Villas at Poco Diablo">
               </p>
               <div class="column-info-reserve">
                 <a class="name-hotel" href="#">Villas at Poco Diablo</a>
@@ -204,7 +204,7 @@
           <p class="footer-copyright">
             <span>Website by</span>
             <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/115x41.png" width="115" height="41" alt="Логотип HTML Academy">
+              <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
             </a>
           </p>
         </div>
