--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <label for="adult">Взрослые:</label>
                 <div>
                   <button class="button increase-button" type="button" name="increase-button"></button>
-                  <input type="number" name="adult" placeholder="2" id="adult">
+                  <input type="text" name="adult" placeholder="2" id="adult">
                   <button class="button reduce-button"  type="button" name="reduce-button"></button>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                 <label for="children">Дети:</label>
                 <div>
                   <button class="button increase-button" type="button" name="increase-button"></button>
-                  <input type="number" name="adult" placeholder="0" id="children">
+                  <input type="text" name="adult" placeholder="0" id="children">
                   <button class="button reduce-button" type="button" name="reduce-button"></button>
                 </div>
               </div>
@@ -157,17 +157,17 @@
         <ul class="footer-social">
           <li>
             <a class="button social-button social-twitter" href="#">
-              <span class="visually-hidden">Твиттер</span>
+              <span class="visually-hidden">Twitter</span>
             </a>
           </li>
           <li>
             <a class="button social-button social-facebook" href="#">
-              <span class="visually-hidden">Фейсбук</span>
+              <span class="visually-hidden">Facebook</span>
             </a>
           </li>
           <li>
             <a class="button social-button social-youtube" href="#">
-              <span class="visually-hidden">Ютуб</span>
+              <span class="visually-hidden">Youtube</span>
             </a>
           </li>
         </ul>
